tests/frontend/pass/array/noaliasing.act
constructor of A
interface constructor()

creates

  uint x := 0
  uint y := 0
  uint[3][3] arr1 := [[0,0,0],[0,0,0],[0,0,0]]
  uint[3][3] arr2 := [[0,0,0],[0,0,0],[0,0,0]]

behaviour f of A
interface f()

iff

  x < 2
  y < 2

storage

  arr1[x][y] => 1
  arr1[x+1][y] => 2
  arr2[x][y+1] => 1
  arr2[x+1][y+1] => 2

